--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <description>BPM and workflow engine (Parent)</description>
   <properties>
     <version.activiti>7-201802-EA-SNAPSHOT</version.activiti>
-    <!--configuration properties-->
+    <!-- configuration properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <enforcer.failOnDuplicatedClasses>true</enforcer.failOnDuplicatedClasses>
@@ -23,44 +23,44 @@
     <argLine>-Duser.language=en</argLine>
 
     <!-- dependency -->
-    <spring-boot.version>2.0.0.RC1</spring-boot.version>
-    <jackson.version>2.9.4</jackson.version>
     <assertj.version>3.8.0</assertj.version>
-    <jsonunit.version>1.24.0</jsonunit.version>
-    <el-api.version>2.2</el-api.version>
-    <commons-io.version>2.0.1</commons-io.version>
-    <commons-fileupload.version>1.2.2</commons-fileupload.version>
-    <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
-    <juel.version>2.2.7</juel.version>
-    <commons-email.version>1.5</commons-email.version>
-    <geronimo.version>1.1.1</geronimo.version>
-    <mybatis.version>3.4.2</mybatis.version>
-    <javaGeom.version>0.11.1</javaGeom.version>
-    <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
-    <jaxb-api.version>2.2.11</jaxb-api.version>
-    <java-uuid-generator.version>3.1.3</java-uuid-generator.version>
-    <jgraphx.version>1.10.4.1</jgraphx.version>
-    <jsr250-api.version>1.0</jsr250-api.version>
     <batik.version>1.9.1</batik.version>
+    <commons-email.version>1.5</commons-email.version>
+    <commons-fileupload.version>1.2.2</commons-fileupload.version>
+    <commons-io.version>2.0.1</commons-io.version>
+    <el-api.version>2.2</el-api.version>
+    <geronimo.version>1.1.1</geronimo.version>
+    <jackson.version>2.9.4</jackson.version>
+    <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
+    <javaGeom.version>0.11.1</javaGeom.version>
+    <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
+    <jaxb-api.version>2.2.11</jaxb-api.version>
+    <jgraphx.version>1.10.4.1</jgraphx.version>
+    <json-unit.version>1.24.0</json-unit.version>
+    <jsr250-api.version>1.0</jsr250-api.version>
+    <juel.version>2.2.7</juel.version>
+    <mybatis.version>3.4.2</mybatis.version>
+    <spring-boot.version>2.0.0.RC1</spring-boot.version>
+    <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
 
     <!-- plugins -->
+    <assertj-assertions-generator-maven-plugin.version>2.0.0</assertj-assertions-generator-maven-plugin.version>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
+    <dependency-check-maven.version>3.1.1</dependency-check-maven.version>
+    <directory-maven-plugin.version>0.1</directory-maven-plugin.version>
+    <extra-enforcer-rules.version>1.0-beta-6</extra-enforcer-rules.version>
+    <illegal-transitive-dependency-check.version>1.7.4</illegal-transitive-dependency-check.version>
+    <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+    <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
     <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+    <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>2.20.1</maven-failsafe-plugin.version>
+    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-    <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
-    <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
-    <extra-enforcer-rules.version>1.0-beta-6</extra-enforcer-rules.version>
-    <illegal-transitive-dependency-check.version>1.7.4</illegal-transitive-dependency-check.version>
-    <directory-maven-plugin.version>0.1</directory-maven-plugin.version>
-    <assertj-assertions-generator-maven-plugin.version>2.0.0</assertj-assertions-generator-maven-plugin.version>
-    <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
-    <dependency-check-maven.version>3.1.1</dependency-check-maven.version>
+    <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
   </properties>
 
   <distributionManagement>
@@ -256,7 +256,7 @@
       <dependency>
         <groupId>net.javacrumbs.json-unit</groupId>
         <artifactId>json-unit-fluent</artifactId>
-        <version>${jsonunit.version}</version>
+        <version>${json-unit.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -438,7 +438,6 @@
             <useReleaseProfile>true</useReleaseProfile> <!-- Do not generate javadoc when releaseing -->
             <pushReleases>true</pushReleases>
             <squash>false</squash>
-            <versionTagPrefix>activiti-</versionTagPrefix>
             <keepBranch>true</keepBranch>
             <noFeatureBuild>true</noFeatureBuild>
             <noFeatureMerge>true</noFeatureMerge>
